web-app/ext-prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
spec:
  type: ExternalName
  externalName: prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local
