web-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  labels:
    name: web-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cloudmacloud.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
    - host: nginx.cloudmacloud.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
    - host: apache.cloudmacloud.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
    - host: grafana.cloudmacloud.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana-service
                port:
                  number: 80
    - host: prometheus.cloudmacloud.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
